@startuml

title __AGGREGATION's Class Diagram__\n

  namespace com.atguigu.uml {
    namespace aggregation {
      class com.atguigu.uml.aggregation.Computer {
          + setMoniter()
          + setMouse()
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace aggregation {
      class com.atguigu.uml.aggregation.Moniter {
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace aggregation {
      class com.atguigu.uml.aggregation.Mouse {
      }
    }
  }
  

  com.atguigu.uml.aggregation.Computer o-- com.atguigu.uml.aggregation.Moniter : moniter
  com.atguigu.uml.aggregation.Computer o-- com.atguigu.uml.aggregation.Mouse : mouse


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
